--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
             <h1>Você está</h1>
             <p id="number">0</p>
             <h1>dias atrasado!</h1>
-            <button onclick="plus()">+1 dia atrasado</button>
-            <div class="record">
-                <h1>Seu recorde de atrasos é X dias!</h1>
+            <button onclick="plus()">+1 dia atrasado</button> <br>
+            <button onclick="zerar()">zerar</button>
+            <div>
+                
+                <h3 id="record">Seu recorde de atrasos é 0 dias</h3>
             </div>
         </div>
 
